--- a/index.html
+++ b/index.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fotograf Uddannelsen</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>tobias</p>
+    <div class="wrapper">
+        <section class="sec-intro">
+          <header role="banner">
+            <label class="fa" for="nav-check"></label>
+            <nav role="navigation">
+              <ul class="nav">
+                <li><a href="#">Forside</a></li>
+                <li><a href="#">Om Os</a></li>
+                <li><a href="#">Billeder</a></li>
+                <li><a href="#">Kontakt</a></li>
+              </ul>
+            </nav>
+          </header>
+          <h1>Fotograf Uddannelsen</h1>
+          </div>
+        </section>
+        <section class="sec-about">
+          <div class="row-red">
+            <div class="row">
+              <h1>Uddan dig som den fedeste fotograf</h1>
+              <p>Fotografen tænker i billeder og er typisk beskæftiget med mode-, reklame- bolig- og/eller portrætfotografi som selvstændig eller i en mindre eller større fotografisk virksomhed.</p>
+            </div>
+          </div>
+          </div>
+        </section>
+          <div class="row">
+            <div class="col-2">
+          </div>
+        </section>
+      </div>
 </body>
 </html>
