--- a/index.html
+++ b/index.html
@@ -1,41 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fotograf Uddannelsen</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Fotograf uddannelsen </title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="wrapper">
-        <section class="sec-intro">
-          <header role="banner">
-            <label class="fa" for="nav-check"></label>
-            <nav role="navigation">
-              <ul class="nav">
-                <li><a href="#">Forside</a></li>
-                <li><a href="#">Om Os</a></li>
-                <li><a href="#">Billeder</a></li>
-                <li><a href="#">Kontakt</a></li>
-              </ul>
+    <main>
+        <header>
+            <nav>
+                <div class="mobile-nav" onclick="menu()">
+                    <h1>&#9776;</h1>
+                </div>
+                <ul class="main-nav">
+                    <li><a href="index.html">Fotograf-uddannelsen</a></li>
+                    <li><a href="contact.html">Kontakt</a></li>
+                </ul>
             </nav>
-          </header>
-          <h1>Fotograf Uddannelsen</h1>
-          </div>
-        </section>
-        <section class="sec-about">
-          <div class="row-red">
-            <div class="row">
-              <h1>Uddan dig som den fedeste fotograf</h1>
-              <p>Fotografen tænker i billeder og er typisk beskæftiget med mode-, reklame- bolig- og/eller portrætfotografi som selvstændig eller i en mindre eller større fotografisk virksomhed.</p>
+        </header>
+        <section class="mid-sec">
+            <div class="pic">
+                <img src="cecilie-graversen.jpg" alt="">
             </div>
-          </div>
-          </div>
+            <div class="pic">
+                <img src="iga-kuriata.jpg" alt="">
+            </div>
+            <div class="pic">
+                <img src="mikael-frederiksen.jpg" alt="">
+            </div>
         </section>
-          <div class="row">
-            <div class="col-2">
-          </div>
+        <section class="bot-sec">
+            <article class="spot-txt">
+                <h3>Uddan dig som fotograf på Medieskolerne</h3>
+                <p>Fotografen tænker i billeder og er typisk beskæftiget med mode-, reklame- bolig- og/eller portrætfotografi som selvstændig eller i en mindre eller større fotografisk virksomhed.</p>
+            </article>
+            <article class="spot-txt">
+                <h3>Grundforløb</h3>
+                <p>På grundforløbet kommer du til at arbejde med fotografi i atelier og on location. Du får undervisning i billedbehandling, træning i at arrangere udstillinger og i at se, beskrive og præsentere fotografier. Med en bestået GF2-eksamen og med opnået praktikpladsaftale kan du gå videre på Hovedforløbet.</p>
+            </article>
+            <article class="spot-txt">
+                <h3>Skoledagene, mødepligt m.m.</h3>
+                <p>Skoledagene veksler mellem teori-undervisning og praktiske opgaver. Undervisningen foregår i klasser af 16-20 elever. Øvelser og opgaver løser du alene eller i gruppe med andre. Kortere og længere projektforløb forekommer også.
+
+                    Du skal være indstillet på at bestille noget og at der er daglig mødepligt på skolen mandag til fredag. Mange elever benytter sig også af muligheden for, at arbejde på skolen om aftenen og i weekenderne. Der vil være pensum, som skal læses.</p>
+            </article>
         </section>
-      </div>
+</main>
+    <script src='js/slider.js'></script>
+    <script src='js/burger.js'></script>
 </body>
+
 </html>
+
+
+
+
+
+
+
+
+
